objects/vlocity_ins__ContractDocumentCollection__c.object
<CustomObject>
    <description>Provides information about each file attached to a document version including its type, size and source.</description>
    <fields>
        <fullName>vlocity_ins__AttachmentId__c</fullName>
        <description>If the element is an attachment, this field stores the attachment identifier</description>
        <label>Attachment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContentVersionId__c</fullName>
        <description>Content Version Identifier</description>
        <label>Content Version</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContractVersionId__c</fullName>
        <description>Contract Document Version Identifier</description>
        <label>Contract Version</label>
        <referenceTo>vlocity_ins__ContractVersion__c</referenceTo>
        <relationshipLabel>Contract Document Elements</relationshipLabel>
        <relationshipName>ContractDocumentElements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <description>Description of the Document Element</description>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DocumentLink__c</fullName>
        <description>Link to the Document</description>
        <label>Document Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DocumentModifiedDate__c</fullName>
        <description>Document modification date</description>
        <label>Document Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DocumentSize__c</fullName>
        <description>Size of the document</description>
        <label>Document Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DocumentTitle__c</fullName>
        <description>The document title</description>
        <label>Document Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DocumentType__c</fullName>
        <description>Type of document - PDF, Word etc</description>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Appendix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsCheckedIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Checked In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceType__c</fullName>
        <description>Source of where the document file is physically located</description>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contract Document Element</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__AttachmentId__c</columns>
        <columns>vlocity_ins__ContentVersionId__c</columns>
        <columns>vlocity_ins__ContractVersionId__c</columns>
        <columns>vlocity_ins__Description__c</columns>
        <columns>vlocity_ins__DocumentLink__c</columns>
        <columns>vlocity_ins__DocumentModifiedDate__c</columns>
        <columns>vlocity_ins__DocumentSize__c</columns>
        <columns>vlocity_ins__DocumentTitle__c</columns>
        <columns>vlocity_ins__DocumentType__c</columns>
        <columns>vlocity_ins__SourceType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contract Document Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Document Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>